fixed footer content spacing

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -390,9 +390,9 @@ main {
   .social-footer-icons {
      
     .fa {
-      font-size: 1.9rem;
+      font-size: 1.6rem;
       color: #a9a9a9;
-      padding: 20px;
+      padding: 15px;
       
       &:hover {
         color: darken(#a9a9a9, 25%);
